# crosscompile-cmake-podman-demo

./: CMakeLists.txt  Dockerfile  README.md  hello.c  toolchain.cmake
