# This file handles building each task as sub-project.
#
# Each task becomes an independent project in which you can experiment.
#
# Tasks are added as separate sub-projects so as compilation errors in
# one task don't affect another task.

cmake_minimum_required(VERSION 3.20.0)
project(crosscompile-cmake-podman-demo LANGUAGES C)

set(CMAKE_C_STANDARD 11)

add_executable(hello hello.c)
